# otelq

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING_LOG.md  compose.demo.yaml  compose.yaml  justfile  lefthook.yml  otel-collector-dev.yaml  otelq.py  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  extension-probe.yml  release-please.yml  release.yml  scorecard.yml
context/: CONTEXT.md
context/adr/: ADR-001-host-cli-reads-bind-mounted-files.md  ADR-002-pep723-uv-single-file-distribution.md  ADR-003-duckdb-otlp-extension-pin-governance.md  ADR-004-collector-in-docker-bind-mount.md  ADR-005-incremental-parquet-cache.md  ADR-006-read-otlp-extension-quirks.md  ADR-007-dual-collector-standalone-and-integrated.md  ADR-008-unified-cache-first-read-and-retention.md  ADR-009-query-history-triage-store.md  ADR-010-adopt-duckdb-1.5.4-otlp-0.6.0.md  ADR-011-worktree-telemetry-identity.md  ADR.md
context/archive/: ADR-005-incremental-parquet-cache.md  ADR-006-read-otlp-extension-quirks.md
context/contract/: CONTRACT-telemetry-directory.md  CONTRACT.md
context/ephemeral/: EPHEMERAL-architecture-review-2026-07-02.md
context/prd/: PRD-otelq.md  PRD.md
context/spec/: SPEC-otelq-cli.md  SPEC-otelq-incremental-cache.md  SPEC-otelq-worktree-scoping.md  (+1 more)
tests/: test_otelq.py
(+17 files in other folders)
